:lipstick: Fix qr code contrast

--- a/src/components/sharing-toolbox/sharing-toolbox.css
+++ b/src/components/sharing-toolbox/sharing-toolbox.css
@@ -81,7 +81,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.7);
+    background: white;
 }
 
 .qr-wrapper {
